fix: make footer visible

--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -3,7 +3,7 @@
 }
 
 .hero {
-  height: 95vh;
+  height: 92vh;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
